# rkyv_codec

./: Cargo.toml  README.md
src/: futures_stream.rs  lib.rs
