[package]
name = "rkyv_codec"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Some adaptors to stream rkyv Archives over AsyncRead and AsyncWrite"
repository = "https://github.com/zyansheep/rkyv_codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7", features = ["validation"] }
futures = "0.3"
pin-project = "1.0"
unsigned-varint = { version = "0.7", features = ["futures"] }
bytes = { version = "1.3" }
bytes-old = { package = "bytes", version = "0.5", optional = true }
thiserror = "1.0"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"

[dev-dependencies]
# Runtime
async-std = { version = "1.12.0", features = ["attributes"] }
# For tests & benchmark comparisons
serde = "1.0.152"
lazy_static = "1.4.0"
# For examples
async-broadcast = "0.5.1"
rustyline-async = "0.3.0"
anyhow = "1.0.68"

[features]
default = ["tokio-stream", "std"]
std = []
tokio-stream = ["tokio-util", "bytes-old"]
tokio-util = []

[workspace]
members = ["examples/no-std"]

[workspace.metadata.nix]
systems = ["x86_64-linux"]

[package.metadata.nix]
app = true
build = true
